--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite":"lite-server"
   },
+  "repository": {
+    "type": "git",
+    "url": "git +https://github.com/meghna28/git-test"
+  },
   "author": "Meghna Upadhyay",
   "license": "ISC",
   "dependencies": {},
